--- a/web page connect/login_success.html
+++ b/web page connect/login_success.html
@@ -47,13 +47,13 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="username">반갑습니다!</h1>
+        <h1 id="username">반갑습니다! 👋 </h1>
         <div class="message">
-            Login 되었습니다! 감정픽스에서 즐거운 시간되세요!
+            Login 되었습니다! 감정픽스에서 즐거운 시간되세요! 😊
         </div>
         <div class="button-container">
-            <button onclick="goToBoardList()">Go to Board</button>
             <button onclick="logout()">Logout</button>
+            <button onclick="goToBoardList()">메인 페이지</button>
         </div>
     </div>
     <script>
